--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width">
        
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
       
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
        
     </head>
     <body>
@@ -26,7 +26,7 @@
           <div class="footer">
             <div class="license">
               <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-                <img alt="Creative Commons Licence" style="border-width:0;" src="{{site.url}}/img/by.svg" width="70px"/>
+                <img alt="Creative Commons Licence" style="border-width:0;" src="{{site.baseurl}}/img/by.svg" width="70px"/>
               </a>
               <br />
               Unless otherwise noted,
