--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
       
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+        
+        <!-- favicon -->
+        <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/gh_avatar.png">
        
     </head>
     <body>
