--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,7 @@ a:visited { color: #a0a; }
 }
 
 .post code {
+  font-family: "Ubuntu Mono", monospace;
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .2em;
