--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700' rel='stylesheet' type='text/css'>
+        <!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700' rel='stylesheet' type='text/css'> -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
+        
+        <style type="text/css">
+            @font-face {
+                font-family: "Fantasque Sans Mono";
+                src: "{{ site.baseurl}}/fonts/fantasque-sans-mono/FantasqueSansMono_Regular.otf"
+            }
+        </style>
        
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
