perhaps this works?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <style type="text/css">
             @font-face {
                 font-family: "Fantasque Sans Mono";
-                src: "{{ site.baseurl}}/fonts/fantasque-sans-mono/FantasqueSansMono_Regular.otf"
+                src: url("{{ site.baseurl }}/fonts/fantasque-sans-mono/FantasqueSansMono_Regular.otf");
             }
         </style>
        
