fantasque sans it is.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,21 @@
         <style type="text/css">
             @font-face {
                 font-family: "Fantasque Sans Mono";
+                font-weight: normal;
+                font-style: normal;
                 src: url("{{ site.baseurl }}/fonts/fantasque-sans-mono/FantasqueSansMono_Regular.otf");
+            }
+            @font-face {
+                font-family: "Fantasque Sans Mono";
+                font-weight: normal;
+                font-style: italic;
+                src: url("{{ site.baseurl }}/fonts/fantasque-sans-mono/FantasqueSansMono_RegItalic.otf");
+            }
+            @font-face {
+                font-family: "Fantasque Sans Mono";
+                font-weight: bold;
+                font-style: normal;
+                src: url("{{ site.baseurl }}/fonts/fantasque-sans-mono/FantasqueSansMono_Bold.otf");
             }
         </style>
        
