--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700' rel='stylesheet' type='text/css'> -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
+        <title>{{ page.title }} - {{ site.name }}</title>
         <meta name="viewport" content="width=device-width">
         
         <style type="text/css">
