update description of the license

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
               </a>
               <br />
               Unless otherwise noted,
-              This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lesguillemets" property="cc:attributionName" rel="cc:attributionURL">lesguillemets</a>
+              text in this blog by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lesguillemets" property="cc:attributionName" rel="cc:attributionURL">lesguillemets</a>
               is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
           </div> </div>
         </div>
