--- a/css/main.css
+++ b/css/main.css
@@ -159,3 +159,7 @@ a:visited { color: #a0a; }
 .post pre.terminal code {
   background-color: #333;
 }
+
+div.license a {
+    text-decoration: none;
+}
