--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,19 @@
          
           <div class="footer">
             <div class="license">
-              <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-                <img alt="Creative Commons Licence" style="border-width:0;" src="{{site.baseurl}}/img/by.svg" width="70px"/>
+              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                <img alt="Creative Commons Licence" style="border-width:0" src="{{site.baseurl}}/img/by-sa.svg" width="70px"/>
               </a>
               <br />
               Unless otherwise noted,
-              text in this blog by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lesguillemets" property="cc:attributionName" rel="cc:attributionURL">lesguillemets</a>
-              is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+              <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
+                text in this blog</span> by
+              <span xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lesguillemets" property="cc:attributionName" rel="cc:attributionURL">
+                lesguillemets
+              </span> is licensed under a
+              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                Creative Commons Attribution-ShareAlike 4.0 International License
+              </a>.
           </div> </div>
         </div>
 
