--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width">
        
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/base16-railscasts.dark.css">
       
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
