--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,7 @@ div.highlight>pre {
     display:block;
     margin-left:auto;
     margin-right:auto;
+    max-width:700px;
 }
 
 /* terminal */
