--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         
         <div class="site">
           <div class="header">
-            <h1 class="title"><a href="{{ site.baseurl }}">{{ site.name }}</a></h1>
+            <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
             <a class="extra" href="categories.html">categories</a>
           </div>
