--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
           <div class="header">
             <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
-            <a class="extra" href="categories.html">categories</a>
+            <a class="extra" href="{{site.baseurl}}/categories.html">categories</a>
           </div>
          
           {{ content }}
