--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,13 @@ div.highlight>pre {
   background-color: #333;
 }
 
-div.footinfo{
+div.footinfo {
+    display:block;
+    overflow:hidden;
+    clear:both;
+}
+
+div.footinfo div.cat{
     color : #555;
     float:right;
 }
@@ -227,6 +233,19 @@ div.footinfo a { color: #557; }
 div.footinfo a:hover   { color: #222; }
 div.footinfo a:visited { color: #737; }
 
+div.footinfo p#previous{
+    float:left;
+}
+div.footinfo p#next{
+    float:right;
+    text-align:right;
+}
+
+div.license {
+    clear:both;
+}
+
 div.license a {
     text-decoration: none;
 }
+
