--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,7 @@
                 lesguillemets
               </span> is licensed under a
               <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                Creative Commons Attribution-ShareAlike 4.0 International License
-              </a>.
+                Creative Commons Attribution-ShareAlike 4.0 International License</a>.
           </div> </div>
         </div>
 
