--- a/css/main.css
+++ b/css/main.css
@@ -249,3 +249,9 @@ div.license a {
     text-decoration: none;
 }
 
+blockquote {
+  background: #eeeeee;
+  border-left: 3px solid #ccc;
+  margin: 0.1em 20px;
+  padding: 0.1em 0.3em;
+}
