--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700' rel='stylesheet' type='text/css'> -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }} - {{ site.name }}</title>
-        <meta name="viewport" content="width=device-width">
-       
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/base16-railscasts.dark.css">
-      
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-        
-        <!-- favicon -->
-        <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/gh_avatar.png">
-       
+      <meta charset="utf-8">
+      <title>{{ page.title }} - {{ site.name }}</title>
+      <meta name="viewport" content="width=device-width">
+     
+      <!-- syntax highlighting CSS -->
+      <link rel="stylesheet" href="{{ site.baseurl }}/css/base16-railscasts.dark.css">
+      <!-- Custom CSS -->
+      <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+      <!-- favicon -->
+      <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/gh_avatar.png">
     </head>
     <body>
-        
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+      <div class="site">
+        <header>
+          <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
             <a class="extra" href="{{site.baseurl}}/categories.html">categories</a>
-          </div>
+        </header>
          
           {{ content }}
          
-          <div class="footer">
-            <div class="license">
-              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                <img alt="Creative Commons Licence" style="border-width:0" src="{{site.baseurl}}/img/by-sa.svg" width="70px"/>
-              </a>
-              <br />
-              Unless otherwise noted,
-              <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
-                text in this blog</span> by
-              <span xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lesguillemets" property="cc:attributionName" rel="cc:attributionURL">
-                lesguillemets
-              </span> is licensed under a
-              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-          </div> </div>
-        </div>
-
+        <footer class="mainfooter">
+          <div class="license">
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+              <img alt="Creative Commons Licence" style="border-width:0" src="{{site.baseurl}}/img/by-sa.svg" width="70px"/>
+            </a>
+            <br />
+            Unless otherwise noted,
+            <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
+              text in this blog</span> by
+            <span xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/lesguillemets" property="cc:attributionName" rel="cc:attributionURL">
+              lesguillemets
+            </span> is licensed under a
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+              Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+          </div>
+        </footer>
+      </div>
     </body>
 </html>
