--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,11 @@
 layout: default
 ---
 <article class="post">
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-{{ content }}
+  <header class="postheader">
+    <h1>{{ page.title }}</h1>
+    <time datetime="{{page.date|date: "%Y-%m-%d"}}">{{ page.date | date_to_string }}</time>
+  </header>
+  {{ content }}
 </article>
 <footer class="postfooter">
   <div class="cat">
