--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post">
   <header class="postheader">
     <h1>{{ page.title }}</h1>
-    <time datetime="{{page.date|date: "%Y-%m-%d"}}">{{ page.date | date_to_string }}</time>
+    <time datetime="{{page.date|date: '%Y-%m-%d'}}">{{ page.date | date_to_string }}</time>
   </header>
   {{ content }}
 </article>
