add meta name="author"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
       <title>{{ page.title }} - {{ site.name }}</title>
       <meta name="viewport" content="width=device-width">
       <meta name="description" content="Vim, Python, Haskell あたりのゆるふわ技術系個人的メモ">
+      <meta name="author" content="lesguillemets">
       {% if page.keywords %}
       <meta property="keywords" content="{{ page.keywords|join:',' }}">
       {% elsif page.categories %}
