change background color

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ ul.categories > li {
   width: 53em;
   margin: 3em auto 2em;
   line-height: 1.5em;
-  background-color: #f5f0c0;
+  background-color: #ffffff;
   padding: 15px;
 }
 .site h1, .site h2{
