--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@
 html, body { height: 100%; }
 
 body {
-  background: #fff url("../img/rose_thorn_bw.jpg") 0 0 repeat fixed;
+  background: #fff url("../img/rose_thorn_bw.jpg") 0 0 no-repeat fixed;
+  background-position:right top;
   background-size:cover;
   font: 13.34px Helvetica, Arial, sans-serif;
   font-size: small;
@@ -86,11 +87,12 @@ ul.categories > li {
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 75%;
+  width: 58em;
   margin: 3em auto 2em;
   line-height: 1.5em;
   background-color: rgba(255,255,255,0.8);
   padding: 15px;
+  box-shadow: 0px 0px 1px 1px rgba(100,100,100,1.3);
 }
 
 .site h1, .site h2{
