--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 html, body { height: 100%; }
 
 body {
-  background: #fff url("../img/rose_thorn_bw.jpg") 0 0 no-repeat fixed;
+  background: #888 url("../img/rose_thorn_bw.jpg") 0 0 no-repeat fixed;
   background-position:right top;
   background-size:cover;
   font: 13.34px Helvetica, Arial, sans-serif;
@@ -92,7 +92,7 @@ ul.categories > li {
   line-height: 1.5em;
   background-color: rgba(255,255,255,0.8);
   padding: 15px;
-  box-shadow: 0px 0px 1px 1px rgba(100,100,100,1.3);
+  box-shadow: 0px 0px 1px 1px rgba(100,100,100,0.3);
 }
 
 .site h1, .site h2{
@@ -139,6 +139,7 @@ footer.mainfooter {
   color: #666;
   border-top: 1px solid #555;
   margin-top: 2em;
+  padding-left:2em;
   padding-top:1em;
   display:block;
   overflow: hidden;
@@ -199,6 +200,7 @@ div.highlight>pre {
     border:1px solid #ddd;
     overflow:auto;
     border-radius 3px;
+    padding:0.5em;
 }
 
 article.post h2, article.post h3{
