--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,8 @@ a:visited { color: #a0a; }
 }
 
 .posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
+  color: #999;
+  font-family: Monaco, "Ubuntu Mono", monospace;
   font-size: 80%;
 }
 
