--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html, body { height: 100%; }
 body {
   background: #888 url("../img/rose_thorn_bw.jpg") 0 0 no-repeat fixed;
   background-position:right top;
-  background-size:cover;
+  background-size:cover !important;
   font: 13.34px Helvetica, Arial, sans-serif;
   font-size: small;
   text-align: center;
