--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ a:visited { color: #a0a; }
 
 .posts span {
   color: #999;
-  font-family: Monaco, "Ubuntu Mono", monospace;
+  font-family: Monaco, "Ubuntu Mono", monospace, Courier;
   font-size: 80%;
 }
 
