change previous/next to older/newer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,10 +17,10 @@ layout: default
   </div><br />
   <div class="neighbour">
     {% if {{page.previous.url}} %}
-    <p id="previous"><a href="{{site.baseurl}}{{ page.previous.url }}">« previous post</a></p>
+    <p id="previous"><a href="{{site.baseurl}}{{ page.previous.url }}">« older post</a></p>
     {% endif %}
     {% if {{page.next.url}} %}
-    <p id="next"><a href="{{site.baseurl}}{{ page.next.url }}">next post »</a></p>
+    <p id="next"><a href="{{site.baseurl}}{{ page.next.url }}">newer post »</a></p>
     {% endif %}
   </div><br />
 </footer>
