--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
           <h1 class="title"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
             <a class="extra" href="{{site.baseurl}}/categories.html">categories</a>
+            <a class="extra" href="{{site.baseurl}}/feeds.html">feeds</a>
         </header>
          
           {{ content }}
