--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ ul.categories > li {
   font-size: 115%;
   text-align: justify;
   width: 58em;
+  max-width: 90%;
   margin: 3em auto 2em;
   line-height: 1.5em;
   background-color: rgba(255,255,255,0.8);
