--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ article.post img{
     display:block;
     margin-left:auto;
     margin-right:auto;
-    max-width:700px;
+    max-width:90%;
 }
 
 /* terminal */
